--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cozmos",
+  "name": "vite-threejs",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,12 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.4",
+    "three": "^0.165.0",
+    "three-stdlib": "^2.30.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/three": "^0.165.0",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
